[package]
name = "cookierun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find-subimage = { git = "https://github.com/mk0912/find-subimage", features = [
    "opencv",
] }
image = "0.25.1"
rand = "0.8.5"
win-screenshot = "4.0.10"
windows = "0.56.0"
